Fix application thumbnail sizing when the height is greater than the width of a window.
This bug happened because the thumbnail box was only maxed, not set to 256x256.
Standard window thumbnails would max out only the width to 256. Having a window with
its height greater than its width meant that the height would max out, but not the
width, causing thumbnails to look uneven.

https://bugzilla.gnome.org/show_bug.cgi?id=604963

--- a/data/theme/gnome-shell.css
+++ b/data/theme/gnome-shell.css
@@ -493,6 +493,11 @@ StTooltip {
     spacing: 4px;
 }
 
+.switcher-list .thumbnail {
+    width:  256px;
+    height: 256px;
+}
+
 .switcher-list .outlined-item-box {
     padding: 6px;
     border: 2px solid rgba(85,85,85,1.0);
